slurm/k8s_mega/practice/11.deploy/blue-green/green-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-green
  labels:
    app: myapp
    deploy: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
      deploy: green
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: myapp
        deploy: green
    spec:
      containers:
        - image: nginx:1.13
          name: myapp
          ports:
            - containerPort: 80
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d/
      volumes:
        - name: config
          configMap:
            name: configmap-green
