slurm/k8s_mega/practice/11.deploy/blue-green/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: nginx.s<номер своего логина>.edu.slurm.io
      http:
        paths:
          - backend:
              serviceName: myapp
              servicePort: 80
